--- a/lakhpati.html
+++ b/lakhpati.html
@@ -112,7 +112,7 @@
         <img src="close.png" alt=""
         id="close">
     </div>
-    <script src="lakhpati.js">
+    <script>
         function myFunction(){
     if(document.getElementById("sideNav").style.left=="1000px"){document.getElementById("sideNav").style.left="500px";
   document.getElementById("menu").style.left="1000px";
