--- a/lakhpati.html
+++ b/lakhpati.html
@@ -112,16 +112,6 @@
         <img src="close.png" alt=""
         id="close">
     </div>
-    <script>
-        function myFunction(){
-    if(document.getElementById("sideNav").style.left=="1000px"){document.getElementById("sideNav").style.left="500px";
-  document.getElementById("menu").style.left="1000px";
-    document.getElementById("close").style.left="845px";}else{document.getElementById("sideNav").style.left="1000px";
-    document.getElementById("menu").style.left="845px";
-    document.getElementById("close").style.left="1000px";}
-   
-}
-
-    </script>
+    <script src="lakhpati.js"></script>
 </body>
 </html>
