--- a/lakhpati.html
+++ b/lakhpati.html
@@ -98,6 +98,7 @@
         <div class="div0">
             <h1>LakhPati Dinghai</h1>
         </div>
+        <img src="image.png" style="width:100%; height:auto;">
     </section>
     <div class="navdiv" id="sideNav">
         <ul>
